# vulkan-glsl-tutorial

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/: copilot-instructions.md
cmake/: ShaderCompile.cmake  VgtAll.cmake  VgtCommon.cmake  VgtConfig.cmake  VgtConfig.h.in  VgtDependencies.cmake  VgtReadFile.cmake  VgtSample.cmake  VgtShaders.cmake  VgtTopLevel.cmake  VgtVkHelpers.h.in  VgtVulkanConfig.cmake
docs/develop/: develop_with_vscode.md  project_plan_ubuntu.md  project_plan_windows.md
steps/Step00_ClearScreen/: CMakeLists.txt  README.md  main.cpp
steps/Step01_MinimalTriangle/: CMakeLists.txt  README.md  main.cpp
steps/Step01_MinimalTriangle/shaders/: triangle.frag  triangle.vert
steps/Step02_VertexColor/: CMakeLists.txt  README.md  main.cpp
steps/Step02_VertexColor/shaders/: vertex_color.vert
steps/Step03_Texture/: CMakeLists.txt  README.md  main.cpp
steps/Step03_Texture/assets/: README.md
steps/Step03_Texture/shaders/: texture.frag  texture.vert
steps/Step04_Transform/: CMakeLists.txt  README.md  main.cpp
steps/Step04_Transform/shaders/: transform.frag  transform.vert
steps/Step05_LightingBasic/: CMakeLists.txt  README.md  main.cpp
steps/Step05_LightingBasic/shaders/: lighting.frag  lighting.vert
tools/: generate_texture.py
